fixed overflow

--- a/style.css
+++ b/style.css
@@ -9,17 +9,14 @@
   box-sizing: border-box;
   outline: none;
 }
-body{
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   background: #111;
-  margin: 0;
-  padding: 0;
   background-color: #111111;
-  height: 0px;
   width:100%;
+  overflow: hidden;
 }
 
 /* The "Rainbow Six Siege" Header */
